# Edge

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  PLAN.md  PROJECT_ANALYSIS.md  README.md  agentdesign.txt  audit_report.md  check_missing_binance.py  defect_ledger.md  detector_stabilization_plan.md  finalize_6m.py  find_orphans.py  fix_regime.py  force_compile_blueprints.py  implementation_plan.md  plan.md  pyproject.toml  pytest.ini  rebuild_memory.py  rebuild_memory_v2.py  requirements.txt  run_and_analyze.py  run_multi_edge_backtest.py  tmp_debug_eval.py  update_coverage.py
.claude/: settings.local.json
agents/: analyst.md  compiler.md  coordinator_playbook.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
configs/: fees.yaml  pipeline.yaml
docs/: 00_INDEX.md  00_START_HERE.md  00_overview.md  01_PROJECT_MODEL.md  01_PROJECT_OVERVIEW.md  01_discover.md  02_ARCHITECTURE.md  02_REPOSITORY_MAP.md  02_validate.md  03_COMPONENT_REFERENCE.md  03_OPERATOR_WORKFLOW.md  03_promote.md  04_COMMANDS_AND_ENTRY_POINTS.md  04_SPEC_AND_ONTOLOGY.md  04_deploy.md  05_ARTIFACTS_AND_INTERPRETATION.md  05_DEPENDENCIES_AND_STACK.md  05_data_foundation.md  06_OPERATOR_WORKFLOW.md  06_QUALITY_GATES_AND_PROMOTION.md  06_core_concepts.md  07_BEST_PRACTICES_AND_FAILURE_MODES.md  07_DATA_FLOW_AND_CONTRACTS.md  08_ENTRY_POINTS_AND_CLI.md  08_TESTING_AND_MAINTENANCE.md  09_RESEARCH_CONCEPTS_AND_HYPOTHESES.md  09_THESIS_BOOTSTRAP_AND_PROMOTION.md  10_TESTING_AND_QUALITY.md  10b_WORKED_EXAMPLE_ENGINE_BACKTEST.md  11_LIVE_THESIS_STORE_AND_OVERLAP.md  12_AUDIT_RUN_SCHEDULE.md  13_TRIGGER_TYPES.md  14_PROPOSAL_TO_LIVE_TRADE_TRACE.md  (+42 more)
(+1878 files in other folders)
